--- a/css/style.css
+++ b/css/style.css
@@ -44,3 +44,16 @@
     z-index: 5;
     background: rgba(0,0,0,0.5);
 }
+#winbox{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backdrop-filter: blur(1px);
+}
+#wintext{
+    background-color: #242424;
+    box-shadow: 0px 0px 10px #222;
+}
+#winbox>.btn{
+    box-shadow: 0px 0px 10px #222;
+}
